objects/Program_Group__c.object
<CustomObject>
    <description>This object holds the Program Collection definitions.Program Collections are organizing records for broadly recognized collections of Programs. This is an augmentation to the extant concepts of a “Program hierarchy” based on the attributes (Market, Business Line, Vertical, Reporting Group) of specific Programs.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Drives availability for selection in Program Relationship only</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Business_Owner__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Business Owner</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Employee_User_Record__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>Contact.Employee_User_Record__r.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Program Collections</relationshipLabel>
        <relationshipName>Program_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Counter_ID__c</fullName>
        <displayFormat>PC{0}</displayFormat>
        <label>Counter ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Effective_End__c</fullName>
        <label>Effective End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Effective_Start__c</fullName>
        <label>Effective Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Short_Name__c</fullName>
        <label>Short Name</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Program Collection</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Short_Name__c</columns>
        <columns>Business_Owner__c</columns>
        <columns>Effective_Start__c</columns>
        <columns>Effective_End__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Current_Program_Collection</fullName>
        <columns>NAME</columns>
        <columns>Effective_Start__c</columns>
        <columns>Effective_End__c</columns>
        <columns>Short_Name__c</columns>
        <columns>Business_Owner__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Effective_Start__c</field>
            <operation>lessOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Effective_End__c</field>
            <operation>greaterOrEqual</operation>
            <value>TODAY</value>
        </filters>
        <label>Current Program Collection</label>
    </listViews>
    <listViews>
        <fullName>Future_Program_Collection</fullName>
        <columns>NAME</columns>
        <columns>Effective_Start__c</columns>
        <columns>Effective_End__c</columns>
        <columns>Short_Name__c</columns>
        <columns>Business_Owner__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Effective_Start__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Effective_End__c</field>
            <operation>greaterThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Future Program Collection</label>
    </listViews>
    <listViews>
        <fullName>Past_Program_Collection</fullName>
        <columns>NAME</columns>
        <columns>Effective_Start__c</columns>
        <columns>Effective_End__c</columns>
        <columns>Short_Name__c</columns>
        <columns>Business_Owner__c</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Effective_Start__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <filters>
            <field>Effective_End__c</field>
            <operation>lessThan</operation>
            <value>TODAY</value>
        </filters>
        <label>Past Program Collection</label>
    </listViews>
    <nameField>
        <label>Program Collection Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Program Collections</pluralLabel>
    <recordTypes>
        <fullName>Default</fullName>
        <active>true</active>
        <label>Default</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>VR_Appropriate_Effective_Dates</fullName>
        <active>true</active>
        <description>Effective End Date Should be greater then Effective Start Date</description>
        <errorConditionFormula>Effective_Start__c &gt; Effective_End__c</errorConditionFormula>
        <errorDisplayField>Effective_Start__c</errorDisplayField>
        <errorMessage>The Effective Start date cannot be later than the Effective End date.</errorMessage>
    </validationRules>
</CustomObject>